# auditlayer

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  DESIGN.md  Makefile  README.md  carousel-week1.html  content-calendar-90day.html  outreach-list.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml
.hermes/: SKILL.md
docs/: admin-features-plan.md  agent-handoff.md  alm-canonical-operator-grand-plan.html  alm-longitudinal-intelligence-plan.html  alm-operator-operations.md  architecture-contract.md  audit-methodology.md  benchmarks.md  comparison-frameworks.md  creator-strategy.md  data-sources-and-billing.md  deployment.md  education-day-one-principles.md  hermes-vm.md  implementation-patterns.md  instagram-app-review.md  mcp-connector.md  media-manager-wishlist.md  notebooklm-knowledge-base.md  product-spec.md  production-portal.md  production-readiness-checklist.md  production-runbook.md  report-design-system.md  (+2 more)
web/: AGENTS.md  (+9 more)
worker/: .env.example  .gitignore  AGENTS.md  README.md  _verify_s06.py  pyproject.toml
worker/auditlayer_worker/: __init__.py  __main__.py  account_homes.py  benchmark.py  billing.py  config.py  core.py  generation.py  hermes.py  hermes_embedded.py  hermes_home_scope.py  hermes_inprocess.py  hermes_runtime.py  instagram_api.py  observability.py  pdf.py  pdf_worker.py  pipeline.py  quality.py  release_preflight.py  supabase_client.py  worker.py
worker/auditlayer_worker/templates/: master-skeleton.html
worker/infra/: auditlayer-pdf-worker.service  auditlayer-worker.accounts-root.conf  auditlayer-worker.service  auditlayer-worker.vm.service  auditlayer-worker@.service  deploy.sh
worker/templates/: narin_reference_template.html
worker/tests/: intake_runner.ts  smoke_test_s04.py  test_account_homes.py  test_claim_rpc.py  test_generation_runtime.py  test_heartbeat.py  test_hermes_embedded.py  test_hermes_inprocess.py  test_hermes_runtime.py  test_instagram_api.py  test_intake_parity.py  test_intake_parity_crosslang.py  test_observability.py  test_operator_migration.py  test_pipeline_finalization.py  test_private_storage_paths.py  test_prompt_version.py  test_quality_gate.py  test_refinement_bundle_lineage.py  test_release_safety.py  test_report_version_finalization.py  test_signal_freshness.py  test_sweeps.py  test_template_pipeline.py  test_upload_paths.py  test_worker.py
(+338 files in other folders)
