[project]
name = "auditlayer"
version = "0.1.0"
description = "Production-oriented portal for AuditLayer audit intake, tracking, and Hermes report generation."
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.vercel]
entrypoint = "src.auditlayer.web:app"

